Fixed calendar spacing.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -112,3 +112,7 @@ div.ui-datepicker{
 	padding-right: 10em;
 	font-size: 90%;
 }
+
+.cal-icon {
+  margin-right:1em;
+}
